# SynQTab

./: .env  .gitignore  Dockerfile  README.md  TabPFNGen_reproducability.md  docker-compose.yaml  pyproject.toml  requirements.txt  tabarena_list.txt  utils.py
config/: dataset_config.py
configs/: PollutionSettings.py  SynthcitySettings.py  TabPFNSettings.py  kaggle_config_multi_profile.yaml
corruption/: CorruptionType.py  __init__.py
dataset/: dataset.py
datasets/: Dataset.py
environment/: minio.py  postgres.py
evaluators/: Syntheval.py
generators/: Generator.py  RealTabTransformer.py  TabPFN.py  __init__.py  quick_and_dirty_synthcity_test.py
jars/: README.md
minio/: minio_example.py
minio/example.d/: hello_minio.txt
motivating_example/: README.md  motivating_example.py
pipelines/: CleanTabPFN.py  Pipeline.py  PollutionTabPFN.py
pollution/: CategoricalShift.py  ClassImbalance.py  DataError.py  DuplicateRows.py  ExplicitMissingValues.py  GaussianNoise.py  ImplicitMissingValues.py  Outliers.py  RepresentationalInconsistencies.py  TyposExtraLetter.py  TyposMissingLetter.py  TyposSwappedLetters.py
postgres/: init.sql
reports/: categorical_features_analysis.txt
scripts/: download_jars.sh  install-revamped-synthcity.sh  install-tabebm.sh  patch-sdmetrics.sh  prepare-execution-environment-tabebm.sh  prepare-execution-environment.sh  setup-uv.sh  syntheval_driver.py
utils/: curate_datasets.py  db_utils.py  file_utils.py  kaggle_utils.py  minio_utils.py  utils.py
visualization/: README.md  docker-compose.yaml  init-superset.sh
(+140 files in other folders)
